<resources>
    <string name="app_name">SmartGlow</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Home">Home</string>
    <string name="schedules">Schedules</string>
    <string name="menu">Menu</string>
    <string name="intro_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et.</string>
    <string name="login">LOGIN</string>
    <string name="please_login">Please Login</string>
    <string name="login_desc">Adding more details will add more layer of  \nsecurity to your account</string>
    <string name="email">Email</string>
    <string name="pasword">Password</string>
    <string name="welcome_home">Welcome Home</string>
    <string name="edit">Edit</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="rename">Rename</string>
    <string name="save">Save</string>
</resources>
