<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:src="@drawable/ic_back" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_marginRight="@dimen/dp_24"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:gravity="center"
                    android:orientation="vertical">


                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lineSpacingExtra="15sp"
                        android:text="@string/please_login"
                        android:textColor="@color/text_start"
                        android:textSize="@dimen/sp_22"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_8"
                        android:lineSpacingExtra="6sp"
                        android:text="@string/login_desc"
                        android:textColor="@color/text_black"
                        android:textSize="@dimen/sp_14" />

                    <EditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_48"
                        android:background="@drawable/ic_et_bg"
                        android:hint="@string/email"
                        android:padding="@dimen/dp_10"
                        android:textColorHint="@color/text_black"/>

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dp_16"
                        android:textColorHint="@color/text_black"
                        android:padding="@dimen/dp_10"
                        android:hint="@string/pasword"
                        android:background="@drawable/ic_et_bg" />


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="6"></LinearLayout>


        </LinearLayout>


        <Button
            android:id="@+id/bt_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/dp_24"
            android:layout_marginLeft="@dimen/dp_24"
            android:layout_marginRight="@dimen/dp_24"
            android:background="@color/colorPrimaryDark"
            android:text="@string/login"
            android:textColor="@color/color_white" />


    </FrameLayout>

</LinearLayout>